ANTLR/JSONLDGraphGenerator/fuente/GrammarjsonldParser.java
// Generated from .\fuente\GrammarjsonldParser.g4 by ANTLR 4.7.1

package fuente;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarjsonldParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CONTEXT=1, CONTEXTCLASS=2, PROPERTY=3, RELATIONSHIP=4, LANGUAGEPROPERTY=5, 
		XSD=6, MANDATORY=7, CONTAINER=8, VALUE=9, WORDTYPE=10, LANGUAGE=11, GENDER=12, 
		NUMBER=13, CONTEXTTYPE=14, GRAPHTYPE=15, ID=16, NAME=17, TYPEOF=18, LABEL=19, 
		ISLIST=20, OPTIONAL=21, MULTIPLICITYMIN=22, MULTIPLICITYMAX=23, USEDBY=24, 
		LANGUAGEDATA=25, INHERITS=26, PROPERTIES=27, OID=28, REVERSENAME=29, REVERSELABEL=30, 
		FROM=31, TO=32, OPENBRACKET=33, CLOSEBRACKET=34, SQUAREOPENBRACKET=35, 
		SQUARECLOSEBRACKET=36, COLON=37, COMMA=38, NEWLINE=39, WS=40, TAB=41, 
		FALSE=42, TRUE=43, STRING=44;
	public static final int
		RULE_json = 0, RULE_context = 1, RULE_languageProperty = 2, RULE_language = 3, 
		RULE_gender = 4, RULE_number = 5, RULE_wordType = 6, RULE_xsd = 7, RULE_contextProperty = 8, 
		RULE_contextId = 9, RULE_contextName = 10, RULE_contextOptional = 11, 
		RULE_contextTypeOf = 12, RULE_contextMultiplicityMax = 13, RULE_contextMultiplicityMin = 14, 
		RULE_contextIsList = 15, RULE_contextLabel = 16, RULE_contextUsedBy = 17, 
		RULE_contextLanguageData = 18, RULE_contextClass = 19, RULE_contextInherits = 20, 
		RULE_contextProperties = 21, RULE_contextOid = 22, RULE_contextRelationship = 23, 
		RULE_contextFrom = 24, RULE_contextTo = 25, RULE_contextReverseName = 26, 
		RULE_contextLabelReverseName = 27, RULE_contextType = 28, RULE_contextValue = 29, 
		RULE_contextContainer = 30, RULE_contextMandatory = 31, RULE_graphs = 32, 
		RULE_graph = 33, RULE_graphType = 34, RULE_property = 35, RULE_id = 36, 
		RULE_name = 37, RULE_typeOf = 38, RULE_label = 39, RULE_isList = 40, RULE_booleanValue = 41, 
		RULE_optional = 42, RULE_multiplicityMax = 43, RULE_multiplicityMin = 44, 
		RULE_usedBy = 45, RULE_languageData = 46, RULE_reference = 47, RULE_value = 48, 
		RULE_classObject = 49, RULE_inherits = 50, RULE_properties = 51, RULE_oid = 52, 
		RULE_relationship = 53, RULE_reverseName = 54, RULE_labelReverseName = 55, 
		RULE_from = 56, RULE_to = 57;
	public static final String[] ruleNames = {
		"json", "context", "languageProperty", "language", "gender", "number", 
		"wordType", "xsd", "contextProperty", "contextId", "contextName", "contextOptional", 
		"contextTypeOf", "contextMultiplicityMax", "contextMultiplicityMin", "contextIsList", 
		"contextLabel", "contextUsedBy", "contextLanguageData", "contextClass", 
		"contextInherits", "contextProperties", "contextOid", "contextRelationship", 
		"contextFrom", "contextTo", "contextReverseName", "contextLabelReverseName", 
		"contextType", "contextValue", "contextContainer", "contextMandatory", 
		"graphs", "graph", "graphType", "property", "id", "name", "typeOf", "label", 
		"isList", "booleanValue", "optional", "multiplicityMax", "multiplicityMin", 
		"usedBy", "languageData", "reference", "value", "classObject", "inherits", 
		"properties", "oid", "relationship", "reverseName", "labelReverseName", 
		"from", "to"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'\"@context\"'", "'\"class\"'", "'\"property\"'", "'\"relationship\"'", 
		"'\"languageProperty\"'", "'\"xsd\"'", "'\"@mandatory\"'", "'\"@container\"'", 
		"'\"@value\"'", "'\"wordType\"'", "'\"language\"'", "'\"gender\"'", "'\"number\"'", 
		"'\"@type\"'", null, "'\"@id\"'", "'\"name\"'", "'\"typeOf\"'", "'\"label\"'", 
		"'\"isList\"'", "'\"optional\"'", "'\"multiplicityMin\"'", "'\"multiplicityMax\"'", 
		"'\"usedby\"'", "'\"languageData\"'", "'\"inherits\"'", "'\"properties\"'", 
		"'\"oid\"'", "'\"reverseName\"'", "'\"labelReverseName\"'", "'\"from\"'", 
		"'\"to\"'", "'{'", "'}'", "'['", "']'", "':'", "','", "'\r\n'", "' '", 
		"'\t'", "'false'", "'true'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "CONTEXT", "CONTEXTCLASS", "PROPERTY", "RELATIONSHIP", "LANGUAGEPROPERTY", 
		"XSD", "MANDATORY", "CONTAINER", "VALUE", "WORDTYPE", "LANGUAGE", "GENDER", 
		"NUMBER", "CONTEXTTYPE", "GRAPHTYPE", "ID", "NAME", "TYPEOF", "LABEL", 
		"ISLIST", "OPTIONAL", "MULTIPLICITYMIN", "MULTIPLICITYMAX", "USEDBY", 
		"LANGUAGEDATA", "INHERITS", "PROPERTIES", "OID", "REVERSENAME", "REVERSELABEL", 
		"FROM", "TO", "OPENBRACKET", "CLOSEBRACKET", "SQUAREOPENBRACKET", "SQUARECLOSEBRACKET", 
		"COLON", "COMMA", "NEWLINE", "WS", "TAB", "FALSE", "TRUE", "STRING"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GrammarjsonldParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarjsonldParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class JsonContext extends ParserRuleContext {
		public TerminalNode OPENBRACKET() { return getToken(GrammarjsonldParser.OPENBRACKET, 0); }
		public GraphsContext graphs() {
			return getRuleContext(GraphsContext.class,0);
		}
		public TerminalNode CLOSEBRACKET() { return getToken(GrammarjsonldParser.CLOSEBRACKET, 0); }
		public ContextContext context() {
			return getRuleContext(ContextContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(GrammarjsonldParser.COMMA, 0); }
		public JsonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_json; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarjsonldParserListener ) ((GrammarjsonldParserListener)listener).enterJson(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarjsonldParserListener ) ((GrammarjsonldParserListener)listener).exitJson(this);
		}
	}

	public final JsonContext json() throws RecognitionException {
		JsonContext _localctx = new JsonContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_json);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(OPENBRACKET);
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CONTEXT) {
				{
				setState(117);
				context();
				setState(118);
				match(COMMA);
				}
			}

			setState(122);
			graphs();
			setState(123);
			match(CLOSEBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContextContext extends ParserRuleContext {
		public TerminalNode CONTEXT() { return getToken(GrammarjsonldParser.CONTEXT, 0); }
		public TerminalNode COLON() { return getToken(GrammarjsonldParser.COLON, 0); }
		public TerminalNode OPENBRACKET() { return getToken(GrammarjsonldParser.OPENBRACKET, 0); }
		public TerminalNode CLOSEBRACKET() { return getToken(GrammarjsonldParser.CLOSEBRACKET, 0); }
		public List<XsdContext> xsd() {
			return getRuleContexts(XsdContext.class);
		}
		public XsdContext xsd(int i) {
			return getRuleContext(XsdContext.class,i);
		}
		public List<LanguagePropertyContext> languageProperty() {
			return getRuleContexts(LanguagePropertyContext.class);
		}
		public LanguagePropertyContext languageProperty(int i) {
			return getRuleContext(LanguagePropertyContext.class,i);
		}
		public List<ContextClassContext> contextClass() {
			return getRuleContexts(ContextClassContext.class);
		}
		public ContextClassContext contextClass(int i) {
			return getRuleContext(ContextClassContext.class,i);
		}
		public List<ContextPropertyContext> contextProperty() {
			return getRuleContexts(ContextPropertyContext.class);
		}
		public ContextPropertyContext contextProperty(int i) {
			return getRuleContext(ContextPropertyContext.class,i);
		}
		public List<ContextRelationshipContext> contextRelationship() {
			return getRuleContexts(ContextRelationshipContext.class);
		}
		public ContextRelationshipContext contextRelationship(int i) {
			return getRuleContext(ContextRelationshipContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(GrammarjsonldParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GrammarjsonldParser.COMMA, i);
		}
		public ContextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_context; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarjsonldParserListener ) ((GrammarjsonldParserListener)listener).enterContext(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarjsonldParserListener ) ((GrammarjsonldParserListener)listener).exitContext(this);
		}
	}

	public final ContextContext context() throws RecognitionException {
		ContextContext _localctx = new ContextContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_context);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(CONTEXT);
			setState(126);
			match(COLON);
			setState(127);
			match(OPENBRACKET);
			setState(138); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(133);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case XSD:
					{
					setState(128);
					xsd();
					}
					break;
				case LANGUAGEPROPERTY:
					{
					setState(129);
					languageProperty();
					}
					break;
				case CONTEXTCLASS:
					{
					setState(130);
					contextClass();
					}
					break;
				case PROPERTY:
					{
					setState(131);
					contextProperty();
					}
					break;
				case RELATIONSHIP:
					{
					setState(132);
					contextRelationship();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(135);
					match(COMMA);
					}
				}

				}
				}
				setState(140); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CONTEXTCLASS) | (1L << PROPERTY) | (1L << RELATIONSHIP) | (1L << LANGUAGEPROPERTY) | (1L << XSD))) != 0) );
			setState(142);
			match(CLOSEBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LanguagePropertyContext extends ParserRuleContext {
		public TerminalNode LANGUAGEPROPERTY() { return getToken(GrammarjsonldParser.LANGUAGEPROPERTY, 0); }
		public TerminalNode COLON() { return getToken(GrammarjsonldParser.COLON, 0); }
		public TerminalNode OPENBRACKET() { return getToken(GrammarjsonldParser.OPENBRACKET, 0); }
		public ContextIdContext contextId() {
			return getRuleContext(ContextIdContext.class,0);
		}
		public LanguageContext language() {
			return getRuleContext(LanguageContext.class,0);
		}
		public GenderContext gender() {
			return getRuleContext(GenderContext.class,0);
		}
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public WordTypeContext wordType() {
			return getRuleContext(WordTypeContext.class,0);
		}
		public TerminalNode CLOSEBRACKET() { return getToken(GrammarjsonldParser.CLOSEBRACKET, 0); }
		public LanguagePropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_languageProperty; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarjsonldParserListener ) ((GrammarjsonldParserListener)listener).enterLanguageProperty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarjsonldParserListener ) ((GrammarjsonldParserListener)listener).exitLanguageProperty(this);
		}
	}

	public final LanguagePropertyContext languageProperty() throws RecognitionException {
		LanguagePropertyContext _localctx = new LanguagePropertyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_languageProperty);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(LANGUAGEPROPERTY);
			setState(145);
			match(COLON);
			setState(146);
			match(OPENBRACKET);
			setState(147);
			contextId();
			setState(148);
			language();
			setState(149);
			gender();
			setState(150);
			number();
			setState(151);
			wordType();
			setState(152);
			match(CLOSEBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LanguageContext extends ParserRuleContext {
		public TerminalNode LANGUAGE() { return getToken(GrammarjsonldParser.LANGUAGE, 0); }
		public TerminalNode COLON() { return getToken(GrammarjsonldParser.COLON, 0); }
		public TerminalNode OPENBRACKET() { return getToken(GrammarjsonldParser.OPENBRACKET, 0); }
		public ContextTypeContext contextType() {
			return getRuleContext(ContextTypeContext.class,0);
		}
		public TerminalNode CLOSEBRACKET() { return getToken(GrammarjsonldParser.CLOSEBRACKET, 0); }
		public TerminalNode COMMA() { return getToken(GrammarjsonldParser.COMMA, 0); }
		public LanguageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_language; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarjsonldParserListener ) ((GrammarjsonldParserListener)listener).enterLanguage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarjsonldParserListener ) ((GrammarjsonldParserListener)listener).exitLanguage(this);
		}
	}

	public final LanguageContext language() throws RecognitionException {
		LanguageContext _localctx = new LanguageContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_language);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(LANGUAGE);
			setState(155);
			match(COLON);
			setState(156);
			match(OPENBRACKET);
			setState(157);
			contextType();
			setState(158);
			match(CLOSEBRACKET);
			setState(160);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(159);
				match(COMMA);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GenderContext extends ParserRuleContext {
		public TerminalNode GENDER() { return getToken(GrammarjsonldParser.GENDER, 0); }
		public TerminalNode COLON() { return getToken(GrammarjsonldParser.COLON, 0); }
		public TerminalNode OPENBRACKET() { return getToken(GrammarjsonldParser.OPENBRACKET, 0); }
		public ContextTypeContext contextType() {
			return getRuleContext(ContextTypeContext.class,0);
		}
		public TerminalNode CLOSEBRACKET() { return getToken(GrammarjsonldParser.CLOSEBRACKET, 0); }
		public TerminalNode COMMA() { return getToken(GrammarjsonldParser.COMMA, 0); }
		public GenderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gender; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarjsonldParserListener ) ((GrammarjsonldParserListener)listener).enterGender(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarjsonldParserListener ) ((GrammarjsonldParserListener)listener).exitGender(this);
		}
	}

	public final GenderContext gender() throws RecognitionException {
		GenderContext _localctx = new GenderContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_gender);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(GENDER);
			setState(163);
			match(COLON);
			setState(164);
			match(OPENBRACKET);
			setState(165);
			contextType();
			setState(166);
			match(CLOSEBRACKET);
			setState(168);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(167);
				match(COMMA);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumberContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(GrammarjsonldParser.NUMBER, 0); }
		public TerminalNode COLON() { return getToken(GrammarjsonldParser.COLON, 0); }
		public TerminalNode OPENBRACKET() { return getToken(GrammarjsonldParser.OPENBRACKET, 0); }
		public ContextTypeContext contextType() {
			return getRuleContext(ContextTypeContext.class,0);
		}
		public TerminalNode CLOSEBRACKET() { return getToken(GrammarjsonldParser.CLOSEBRACKET, 0); }
		public TerminalNode COMMA() { return getToken(GrammarjsonldParser.COMMA, 0); }
		public NumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarjsonldParserListener ) ((GrammarjsonldParserListener)listener).enterNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarjsonldParserListener ) ((GrammarjsonldParserListener)listener).exitNumber(this);
		}
	}

	public final NumberContext number() throws RecognitionException {
		NumberContext _localctx = new NumberContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_number);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			match(NUMBER);
			setState(171);
			match(COLON);
			setState(172);
			match(OPENBRACKET);
			setState(173);
			contextType();
			setState(174);
			match(CLOSEBRACKET);
			setState(176);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(175);
				match(COMMA);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WordTypeContext extends ParserRuleContext {
		public TerminalNode WORDTYPE() { return getToken(GrammarjsonldParser.WORDTYPE, 0); }
		public TerminalNode COLON() { return getToken(GrammarjsonldParser.COLON, 0); }
		public TerminalNode OPENBRACKET() { return getToken(GrammarjsonldParser.OPENBRACKET, 0); }
		public ContextTypeContext contextType() {
			return getRuleContext(ContextTypeContext.class,0);
		}
		public TerminalNode CLOSEBRACKET() { return getToken(GrammarjsonldParser.CLOSEBRACKET, 0); }
		public TerminalNode COMMA() { return getToken(GrammarjsonldParser.COMMA, 0); }
		public WordTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_wordType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarjsonldParserListener ) ((GrammarjsonldParserListener)listener).enterWordType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarjsonldParserListener ) ((GrammarjsonldParserListener)listener).exitWordType(this);
		}
	}

	public final WordTypeContext wordType() throws RecognitionException {
		WordTypeContext _localctx = new WordTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_wordType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			match(WORDTYPE);
			setState(179);
			match(COLON);
			setState(180);
			match(OPENBRACKET);
			setState(181);
			contextType();
			setState(182);
			match(CLOSEBRACKET);
			setState(184);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(183);
				match(COMMA);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class XsdContext extends ParserRuleContext {
		public TerminalNode XSD() { return getToken(GrammarjsonldParser.XSD, 0); }
		public TerminalNode COLON() { return getToken(GrammarjsonldParser.COLON, 0); }
		public TerminalNode STRING() { return getToken(GrammarjsonldParser.STRING, 0); }
		public XsdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_xsd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarjsonldParserListener ) ((GrammarjsonldParserListener)listener).enterXsd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarjsonldParserListener ) ((GrammarjsonldParserListener)listener).exitXsd(this);
		}
	}

	public final XsdContext xsd() throws RecognitionException {
		XsdContext _localctx = new XsdContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_xsd);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(186);
			match(XSD);
			setState(187);
			match(COLON);
			setState(188);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
